[package]
name = "classnames"
description = "Library for generating BEM style classnames"
keywords = ["css", "bem", "classes", "classname", "classnames"]
version = "2.1.3"
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/JosephLenton/classnames"

[dependencies]
smallvec = "1.6.1"

[dev-dependencies]
render = { git = "https://github.com/render-rs/render.rs" }
xmltree = "0.10"
